add new website from server na

--- a/xem-phim-moi/thi-the-bi-bo-roi/index.html
+++ b/xem-phim-moi/thi-the-bi-bo-roi/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/leviathan" title="Leviathan">
+          <a class="list-top-movie-link" href="/phim-moi/com-tap-su" title="Cớm tập sự">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/leviathan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/com-tap-su-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Leviathan
+             Cớm tập sự
             </span>
             <span class="list-top-movie-item-en">
-             Leviathan
+             Ride Along
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/diep-vien-86-nhiem-vu-bat-kha-thi" title="Điệp viên 86: Nhiệm vụ bất khả thi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-vien-86-nhiem-vu-bat-kha-thi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Điệp viên 86: Nhiệm vụ bất khả thi
+            </span>
+            <span class="list-top-movie-item-en">
+             Get Smart
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/anh-thay-ngoi-sao" title="Anh thầy ngôi sao">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-thay-ngoi-sao-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Anh thầy ngôi sao
+            </span>
+            <span class="list-top-movie-item-en">
+             Superstar Teacher
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1807,62 +1851,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-sieu-anh-hung-memories" title="Học Viện Siêu Anh Hùng: Memories">
+          <a class="list-top-movie-link" href="/phim-moi/tro-choi-chien-binh" title="Trò Chơi Chiến Binh">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-sieu-anh-hung-memories-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-chien-binh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Học Viện Siêu Anh Hùng: Memories
+             Trò Chơi Chiến Binh
             </span>
             <span class="list-top-movie-item-en">
-             Boku no Hero Academia: Memories
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/than-tuong-chau-au" title="Thần Tượng Châu Âu">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-tuong-chau-au-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thần Tượng Châu Âu
-            </span>
-            <span class="list-top-movie-item-en">
-             Madagascar 3: Europe's Most Wanted
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nuoc-my-mot-thoi" title="Nước Mỹ Một Thời">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuoc-my-mot-thoi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nước Mỹ Một Thời
-            </span>
-            <span class="list-top-movie-item-en">
-             Once Upon a Time in America
+             Warrior's Gate
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1873,18 +1873,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chay-dau-cho-thoat" title="Chạy Đâu Cho Thoát">
+          <a class="list-top-movie-link" href="/phim-moi/yeu-em-giua-troi-xanh" title="Yêu Em Giữa Trời Xanh">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chay-dau-cho-thoat-phim-bo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-em-giua-troi-xanh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chạy Đâu Cho Thoát
+             Yêu Em Giữa Trời Xanh
             </span>
             <span class="list-top-movie-item-en">
-             You're All Surrounded
+             New Horizon
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
