add new website from server na

--- a/xem-phim-bo/cong-anh-ma-chay/index.html
+++ b/xem-phim-bo/cong-anh-ma-chay/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1746,7 +1746,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1767,18 +1767,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/whindersson-nunes-xuong-tho-giang-dao" title="Whindersson Nunes: Xướng thơ giảng đạo">
+          <a class="list-top-movie-link" href="/phim-moi/hai-em-gai-quan-gia-xinh-dep" title="Hai Em Gái Quản Gia Xinh Đẹp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/whindersson-nunes-xuong-tho-giang-dao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-em-gai-quan-gia-xinh-dep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Whindersson Nunes: Xướng thơ giảng đạo
+             Hai Em Gái Quản Gia Xinh Đẹp
             </span>
             <span class="list-top-movie-item-en">
-             Whindersson Nunes: Preaching to the Choir
+             옷잘벗는가정부
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/yeu-trong-dau-thuong" title="Yêu Trong Đau Thương">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-trong-dau-thuong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Yêu Trong Đau Thương
+            </span>
+            <span class="list-top-movie-item-en">
+             Love In Sadness
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/biet-doi-diet-vong-phan-4" title="Biệt Đội Diệt Vong (Phần 4)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-diet-vong-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Biệt Đội Diệt Vong (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             Doom Patrol Season 4
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1789,87 +1833,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngach-do-hanh-phuc" title="Ngạch Độ Hạnh Phúc">
+          <a class="list-top-movie-link" href="/phim-moi/co-nang-tram-lang" title="Cô Nàng Trầm Lặng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngach-do-hanh-phuc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-quiet-girl-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngạch Độ Hạnh Phúc
+             Cô Nàng Trầm Lặng
             </span>
             <span class="list-top-movie-item-en">
-             Love on Credit
+             The Quiet Girl
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/admiral" title="Admiral">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/admiral-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Admiral
+            </span>
+            <span class="list-top-movie-item-en">
+             Admiral
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trung-khoi-chi-cuc-hai-thinh-loi-2" title="Trùng Khởi Chi Cực Hải Thính Lôi 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trung-khoi-chi-cuc-hai-thinh-loi-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trùng Khởi Chi Cực Hải Thính Lôi 2
-            </span>
-            <span class="list-top-movie-item-en">
-             Reunion: The Sound of the Providence Season 2
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phieu-du-dai-duong-den-gap-em" title="Phiêu du đại dương đến gặp em">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phieu-du-dai-duong-den-gap-em-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Phiêu du đại dương đến gặp em
-            </span>
-            <span class="list-top-movie-item-en">
-             We are Meant to Meet
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cua-hang-sat-thu" title="Cửa Hàng Sát Thủ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cua-hang-sat-thu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cửa Hàng Sát Thủ
-            </span>
-            <span class="list-top-movie-item-en">
-             A Shop for Killers
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
