--- a/xem-phim-bo/cong-anh-ma-chay/index.html
+++ b/xem-phim-bo/cong-anh-ma-chay/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             10
             </dd>
             <br/>
            </dl>
@@ -1767,21 +1767,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hai-em-gai-quan-gia-xinh-dep" title="Hai Em Gái Quản Gia Xinh Đẹp">
+          <a class="list-top-movie-link" href="/phim-moi/dot-kich-bat-ngo" title="Đột Kích Bất Ngờ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-em-gai-quan-gia-xinh-dep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dot-kich-bat-ngo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hai Em Gái Quản Gia Xinh Đẹp
+             Đột Kích Bất Ngờ
             </span>
             <span class="list-top-movie-item-en">
-             옷잘벗는가정부
+             The Marksman
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1789,21 +1789,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-trong-dau-thuong" title="Yêu Trong Đau Thương">
+          <a class="list-top-movie-link" href="/phim-moi/beau-pere" title="Beau Pere">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-trong-dau-thuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/beau-pere-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yêu Trong Đau Thương
+             Beau Pere
             </span>
             <span class="list-top-movie-item-en">
-             Love In Sadness
+             Beau Pere
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1811,18 +1811,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-diet-vong-phan-4" title="Biệt Đội Diệt Vong (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/batman-the-dark-knight-returns-part-2" title="Batman: The Dark Knight Returns, Part 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-diet-vong-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/batman-the-dark-knight-returns-part-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Biệt Đội Diệt Vong (Phần 4)
+             Batman: The Dark Knight Returns, Part 2
             </span>
             <span class="list-top-movie-item-en">
-             Doom Patrol Season 4
+             Batman: The Dark Knight Returns, Part 2
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1833,21 +1833,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-tram-lang" title="Cô Nàng Trầm Lặng">
+          <a class="list-top-movie-link" href="/phim-moi/ranh-gioi-my-nhan-ngu" title="Ranh Giới Mỹ Nhân Ngư">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-quiet-girl-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ranh-gioi-my-nhan-ngu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Nàng Trầm Lặng
+             Ranh Giới Mỹ Nhân Ngư
             </span>
             <span class="list-top-movie-item-en">
-             The Quiet Girl
+             Mermaid Bound
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1855,18 +1855,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/admiral" title="Admiral">
+          <a class="list-top-movie-link" href="/phim-moi/ngot-ngao-va-ruc-ro" title="Ngọt Ngào Và Rực Rỡ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/admiral-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngot-ngao-va-ruc-ro-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Admiral
+             Ngọt Ngào Và Rực Rỡ
             </span>
             <span class="list-top-movie-item-en">
-             Admiral
+             Twinkling Watermelon
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
