--- a/xem-phim-bo/wistoria-truong-va-kiem/index.html
+++ b/xem-phim-bo/wistoria-truong-va-kiem/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             11
             </dd>
             <br/>
            </dl>
@@ -1649,7 +1649,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1670,40 +1670,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-bi-khai-tru" title="Kẻ bị khai trừ">
+          <a class="list-top-movie-link" href="/phim-moi/khi-phai-nu-dung-len" title="Khi Phái Nữ Đứng Lên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-bi-khai-tru-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-phai-nu-dung-len-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kẻ bị khai trừ
+             Khi Phái Nữ Đứng Lên
             </span>
             <span class="list-top-movie-item-en">
-             The Bad Batch
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-dau-bep-soma-phan-5" title="Vua đầu bếp Soma (Phần 5)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-dau-bep-soma-phan-5-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vua đầu bếp Soma (Phần 5)
-            </span>
-            <span class="list-top-movie-item-en">
-             Food Wars!: Shokugeki no Soma (The Fifth Plate)
+             Women Walk The Line
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1714,18 +1692,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cam-do-ma-ca-rong" title="Cám Dỗ Ma Cà Rồng">
+          <a class="list-top-movie-link" href="/phim-moi/nang-ve-si-cua-toi" title="Nàng Vệ Sĩ Của Tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-do-ma-ca-rong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nang-ve-si-cua-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cám Dỗ Ma Cà Rồng
+             Nàng Vệ Sĩ Của Tôi
             </span>
             <span class="list-top-movie-item-en">
-             The Insatiable
+             My Lovely Bodyguard
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/canh-sat-don-doc" title="Cảnh Sát Đơn Độc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-don-doc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cảnh Sát Đơn Độc
+            </span>
+            <span class="list-top-movie-item-en">
+             Lone Star
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/am-thuc-tu-cam-thanh" title="Ẩm Thực Tử Cấm Thành">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-thuc-tu-cam-thanh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ẩm Thực Tử Cấm Thành
+            </span>
+            <span class="list-top-movie-item-en">
+             Royal Masterchef
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1736,40 +1758,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bien-nien-su-arthdal" title="Biên niên sử Arthdal">
+          <a class="list-top-movie-link" href="/phim-moi/star-trek-the-he-tiep-theo-phan-4" title="Star Trek: Thế hệ tiếp theo (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bien-nien-su-arthdal-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-the-he-tiep-theo-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Biên niên sử Arthdal
+             Star Trek: Thế hệ tiếp theo (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Arthdal Chronicles
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cheoje-thoi-tre-va-nhung-nguoi-ban" title="Cheoje Thời Trẻ Và Những Người Bạn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cheoje-thoi-tre-va-nhung-nguoi-ban-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cheoje Thời Trẻ Và Những Người Bạn
-            </span>
-            <span class="list-top-movie-item-en">
-             Young Cheoje And Friend
+             Star Trek: The Next Generation (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
