add new website from server na

--- a/xem-phim-bo/truc-tam/index.html
+++ b/xem-phim-bo/truc-tam/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1672,7 +1672,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1693,84 +1693,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khu-vuon-hoang-kim" title="Khu Vườn Hoàng Kim">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-vuon-hoang-kim-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Khu Vườn Hoàng Kim
-            </span>
-            <span class="list-top-movie-item-en">
-             Golden Garden
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-the-la-anh-ay" title="Có Thể Là Anh Ấy">
+          <a class="list-top-movie-link" href="/phim-moi/bang-chung-the-xac" title="Bằng chứng thể xác">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-the-la-anh-ay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-chung-the-xac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Có Thể Là Anh Ấy
+             Bằng chứng thể xác
             </span>
             <span class="list-top-movie-item-en">
-             It Could Be Him
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sing-or-spin-2020" title="Sing or Spin 2020">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sing-or-spin-2020-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sing or Spin 2020
-            </span>
-            <span class="list-top-movie-item-en">
-             Sing or Spin 2020
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/em-la-thanh-tri-doanh-luy-cua-anh" title="Em Là Thành Trì Doanh Lũy Của Anh">
-           <span class="status">
-            HD Vietsub + Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/em-la-thanh-tri-doanh-luy-cua-anh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Em Là Thành Trì Doanh Lũy Của Anh
-            </span>
-            <span class="list-top-movie-item-en">
-             You Are My Hero
+             Body of Evidence
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1781,18 +1715,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giac-mo-my-phan-1" title="Giấc Mơ Mỹ (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/the-cincinnati-kid" title="The Cincinnati Kid">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giac-mo-my-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-cincinnati-kid-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giấc Mơ Mỹ (Phần 1)
+             The Cincinnati Kid
             </span>
             <span class="list-top-movie-item-en">
-             Little America (Season 1)
+             The Cincinnati Kid
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-khong-gian-2" title="Cuộc Chiến Không Gian">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-khong-gian-2019-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cuộc Chiến Không Gian
+            </span>
+            <span class="list-top-movie-item-en">
+             For All Mankind
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/xin-hay-ban-cho-toi-mot-doi-canh" title="Xin Hãy Ban Cho Tôi Một Đôi Cánh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xin-hay-ban-cho-toi-mot-doi-canh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Xin Hãy Ban Cho Tôi Một Đôi Cánh
+            </span>
+            <span class="list-top-movie-item-en">
+             Please Give Me A Pair Of Wings
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/given-khoi-day-dam-me-ban-dien-anh" title="GIVEN- Khơi Dậy Đam Mê (Bản Điện Ảnh)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/given-khoi-day-dam-me-ban-dien-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             GIVEN- Khơi Dậy Đam Mê (Bản Điện Ảnh)
+            </span>
+            <span class="list-top-movie-item-en">
+             Given The Movie
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
